@@ -1,4 +1,3 @@
-
 package com.example.employeemanagementsystem.service;
 
 import com.example.employeemanagementsystem.dao.DepartmentDao;
@@ -7,7 +6,6 @@ import com.example.employeemanagementsystem.dto.get.DepartmentDto;
 import com.example.employeemanagementsystem.exception.ResourceNotFoundException;
 import com.example.employeemanagementsystem.model.Department;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -15,6 +13,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class DepartmentService {
+
+    private static final String DEPARTMENT_NOT_FOUND_MESSAGE = "Department not found with id "; 
 
     private final DepartmentDao departmentDao;
     private final ModelMapper modelMapper;
@@ -30,32 +30,28 @@ public class DepartmentService {
         return departmentDao
             .findById(id)
             .map(this::convertToDto)
-            .orElseThrow(() -> new ResourceNotFoundException("Department not found with id " + id));
+            .orElseThrow(() -> new ResourceNotFoundException(DEPARTMENT_NOT_FOUND_MESSAGE + id)); 
     }
 
     @Transactional(readOnly = true)
     public List<DepartmentDto> getAllDepartments() {
-        return departmentDao.findAll()
-                .stream().map(this::convertToDto).collect(Collectors.toList());
+        return departmentDao.findAll().stream()
+            .map(this::convertToDto)
+            .toList(); 
     }
 
     @Transactional
-    public DepartmentDto createDepartment(
-        DepartmentCreateDto departmentCreateDto) { 
+    public DepartmentDto createDepartment(DepartmentCreateDto departmentCreateDto) {
         Department department = modelMapper.map(departmentCreateDto, Department.class);
         Department savedDepartment = departmentDao.save(department);
         return convertToDto(savedDepartment);
     }
 
     @Transactional
-    public DepartmentDto updateDepartment(
-        Long id, DepartmentCreateDto departmentCreateDto) { 
-        Department department =
-            departmentDao
-                .findById(id)
-                .orElseThrow(() ->
-                    new ResourceNotFoundException("Department not found with id " + id));
-
+    public DepartmentDto updateDepartment(Long id, DepartmentCreateDto departmentCreateDto) {
+        Department department = departmentDao
+            .findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException(DEPARTMENT_NOT_FOUND_MESSAGE + id)); 
         modelMapper.map(departmentCreateDto, department);
         Department updatedDepartment = departmentDao.save(department);
         return convertToDto(updatedDepartment);
@@ -65,7 +61,7 @@ public class DepartmentService {
     public void deleteDepartment(Long id) {
         departmentDao
             .findById(id)
-            .orElseThrow(() -> new ResourceNotFoundException("Department not found with id " + id));
+            .orElseThrow(() -> new ResourceNotFoundException(DEPARTMENT_NOT_FOUND_MESSAGE + id)); 
         departmentDao.deleteById(id);
     }
 
